# ladybird

./: .gitignore  BEHAVIORAL_ANALYZER_DESIGN_REPORT.md  CLAUDE.md  HISTORY_FIXES_CODE_CHANGES.md  HISTORY_FIXES_KEY_SNIPPETS.md  HISTORY_FIXES_SUMMARY.txt  HISTORY_NAVIGATION_FIXES_REPORT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_DIFF_SUMMARY.txt  PHASE_1_COMPLETE_SUMMARY.md  README.md  README_DAY29_TASK1.md  SANDBOX_INTEGRATION_TEST_SUMMARY.md  SANDBOX_TEST_DELIVERY_REPORT.md  TASK4_COMPLETE.txt  TASK_2_COMPLETION_REPORT.md  TASK_COMPLETION_SUMMARY.md  TESTING_FINGERPRINTING_DETECTION.md  THREAT_SCORING_ENHANCEMENT_REPORT.md  THREAT_SCORING_QUICK_REFERENCE.md  WASMTIME_CODE_SUMMARY.txt  WASMTIME_EXECUTION_FLOW.txt  WASMTIME_IMPLEMENTATION_REPORT.md  test_canvas_fingerprinting.html  test_crash_minimal.cpp  test_day29_security_fixes.cpp  test_pseudo_innertext.html  test_wasmtime_module_loading.cpp  verify_day29_task1.sh
.claude/: AGENT_SYSTEM.md  HOW_TO_TRIGGER_PARALLEL_WORK.md  PARALLEL_AGENTS.md  QUICK_REFERENCE.md  README.md  config.json  mcp.json  skills-config.json
AK/: Format.cpp  Format.h  NumericLimits.h  StdLibExtraDetails.h  Types.h
Libraries/LibIPC/: BufferedIPCReader.cpp  BufferedIPCReader.h  BufferedIPCWriter.cpp  BufferedIPCWriter.h  CMakeLists.txt  Limits.h  TransportSocketWindows.cpp  TransportSocketWindows.h
Services/: CMakeLists.txt
Services/Sentinel/: AuditLog.cpp  AuditLog.h  BenchmarkBehavioralAnalyzer.cpp  BenchmarkC2Detector.cpp  BenchmarkThreatScoring.cpp  BloomFilter.cpp  BloomFilter.h  C2Detector.cpp  C2Detector.h  CMakeLists.txt  CircuitBreakerIntegrationExample.cpp  ClientRateLimiter.cpp  ClientRateLimiter.h  DNSAnalyzer.cpp  DNSAnalyzer.h  DatabaseMigrations.cpp  DatabaseMigrations.h  FederatedLearning.cpp  FederatedLearning.h  FingerprintingDetector.cpp  FingerprintingDetector.h  FlowInspector.cpp  FlowInspector.h  GRACEFUL_DEGRADATION_QUICK_REFERENCE.md  GracefulDegradation.cpp  GracefulDegradation.h  GracefulDegradationExample.cpp  GracefulDegradationIntegration.h  HealthCheck.cpp  HealthCheck.h  IPFSThreatSync.cpp  IPFSThreatSync.h  InputValidator.cpp  InputValidator.h  LRUCache.h  MalwareML.cpp  MalwareML.h  NSJAIL_COMMAND_BUILDER_REPORT.md  NSJAIL_COMMAND_BUILDER_SUMMARY.txt  PhishingURLAnalyzer.cpp  (+33 more)
Services/Sentinel/NetworkIsolation/: IPTablesBackend.cpp  IPTablesBackend.h  NFTablesBackend.cpp  NFTablesBackend.h  NetworkIsolationManager.cpp  NetworkIsolationManager.h  ProcessMonitor.cpp  ProcessMonitor.h  QUICK_START.md  SECURITY_CONSIDERATIONS.md  TestNetworkIsolationManager.cpp
Services/Sentinel/Quarantine/: FileEncryption.cpp  FileEncryption.h  QuarantineManager.cpp  QuarantineManager.h  QuarantineUI.h  README.md
Services/Sentinel/Sandbox/: BehavioralAnalyzer.cpp  BehavioralAnalyzer.h  INTEGRATION_TEST_REPORT.md  LAUNCH_NSJAIL_IMPLEMENTATION.md  MALWARE_PATTERN_DETECTION.md  NSJAIL_INSTALLATION.md  NSJAIL_LAUNCHER_DESIGN.md  NSJAIL_LAUNCHER_SUMMARY.md  Orchestrator.cpp  Orchestrator.h  PARSER_IMPLEMENTATION.md  PARSER_QUICK_REF.md  PARSER_SUMMARY.md  PIPE_IO_IMPLEMENTATION.md  QUICK_START_NSJAIL.md  README.md  START_HERE.md  SYSCALL_MAPPING_IMPLEMENTATION_REPORT.md  SYSCALL_MAPPING_QUICK_REFERENCE.md  SYSCALL_MONITORING_DESIGN.md  SYSCALL_MONITORING_SUMMARY.md  TASK3_BEFORE_AFTER_COMPARISON.md  TASK3_COMMUNICATION_ENHANCEMENT_REPORT.md  TASK3_QUICK_REFERENCE.md  TEST_SUMMARY.txt  ThreatReporter.cpp  ThreatReporter.h  VerdictEngine.cpp  VerdictEngine.h  WASMTIME_CMAKE_INTEGRATION.md  WEEK1_DAY4-5_COMPLETION_REPORT.md  WEEK2_COMPLETION_REPORT.md  WEEK2_INDEX.md  WEEK2_SYSCALL_MONITORING_DESIGN_REPORT.md  WasmExecutor.cpp  WasmExecutor.h  benchmark_detailed.sh  benchmark_sandbox.sh  install_nsjail.sh  install_wasmtime.sh  (+3 more)
Services/Sentinel/Sandbox/configs/: README.md  malware-sandbox.cfg  malware-sandbox.kafel
Services/Sentinel/Sandbox/malware_analyzer_wasm/: Cargo.toml  IMPLEMENTATION_REPORT.md  README.md  build.sh
Services/Sentinel/Sandbox/malware_analyzer_wasm/.cargo/: config.toml
Services/Sentinel/Sandbox/malware_analyzer_wasm/src/: allocator.rs  analysis.rs  lib.rs  ml.rs  patterns.rs
Services/Sentinel/Sandbox/test_samples/: README.md
Services/Sentinel/Sandbox/test_samples/benign/: README.md  hello_world.txt
Services/Sentinel/Sandbox/test_samples/malicious/: README.md  suspicious_script.js
Services/Sentinel/Test/behavioral/: INDEX.md  QUICK_START.md  README.md
Services/Sentinel/Test/behavioral/benign/: calculator.py  hello.sh
Services/Sentinel/Test/behavioral/malicious/: ransomware-sim.sh
Services/Sentinel/ThreatIntelligence/: OTXFeedClient.cpp  OTXFeedClient.h  README.md  RateLimiter.cpp  RateLimiter.h  UpdateScheduler.cpp  UpdateScheduler.h  VirusTotalClient.cpp  VirusTotalClient.h  YARAGenerator.cpp  YARAGenerator.h
Services/Sentinel/assets/: malware_analyzer.wasm
Tests/: CMakeLists.txt  COVERAGE_AUDIT.md
Tests/Sentinel/: CMakeLists.txt  TestDownloadVettingIntegration.cpp  TestFormMonitor.cpp  TestGracefulDegradation.cpp  TestHealthCheck.cpp  TestLRUCache.cpp  TestPolicyGraphSQLInjection.cpp  TestQuarantineIDValidation.cpp  TestQuarantinePathTraversal.cpp  TestSentinelServerFileAccess.cpp  TestURLVerdictService.cpp
Tools/: CMakeLists.txt  README.md  benchmark_policydb.cpp  benchmark_sentinel_full.cpp  sentinel-cli.cpp
Tools/test-download-server/: Dockerfile  PLAYWRIGHT_INTEGRATION.md  README.md  docker-compose.yml  nginx.conf  start-test.sh
Tools/test-download-server/test-files/: obfuscated.js  safe-file.txt
UI/Qt/: Tab.h  (+14 more)
docs/: BEHAVIORAL_ANALYSIS_IMPLEMENTATION_GUIDE.md  BEHAVIORAL_ANALYSIS_INDEX.md  BEHAVIORAL_ANALYSIS_QUICK_REFERENCE.md  BEHAVIORAL_ANALYSIS_SPEC.md  BEHAVIORAL_ANALYZER_DESIGN.md  BEHAVIORAL_ANALYZER_IMPLEMENTATION_CHECKLIST.md  BEHAVIORAL_ANALYZER_INDEX.md  BEHAVIORAL_ANALYZER_QUICK_REFERENCE.md  CHANGELOG.md  FEATURES.md  FINGERPRINTING_DETECTION_ARCHITECTURE.md  GIT_WORKFLOW.md  MILESTONE_0.3_PLAN.md  MILESTONE_0.4_PHASE_6_SPEC.md  MILESTONE_0.4_PLAN.md  MILESTONE_0.4_TECHNICAL_SPECS.md  MILESTONE_0.5_PHASE_1B_PERFORMANCE_REPORT.md  MILESTONE_0.5_PHASE_1B_STATUS.md  (+101 more)
(+572 files in other folders)
